...
    "heart_minus", "heart_broken" -> HocketIcons.Filled.FavoriteBorder
    "star", "star_rate" -> HocketIcons.Filled.Star
    "star_outline" -> HocketIcons.Filled.StarOutline
    "download" -> HocketIcons.Filled.Download
    "download_done" -> HocketIcons.Filled.DownloadDone
    "delete", "delete_forever" -> HocketIcons.Filled.Delete
    "remove" -> HocketIcons.Filled.Remove
    "clear_all" -> HocketIcons.Filled.ClearAll
    "album" -> HocketIcons.Filled.Album
    "artist", "person" -> HocketIcons.Filled.Person
    "history" -> HocketIcons.Filled.History
    "push_pin" -> HocketIcons.Filled.PushPin
    "keep_off" -> HocketIcons.Outlined.PushPin
...
